--- a/src/components/TagList.astro
+++ b/src/components/TagList.astro
@@ -3,23 +3,35 @@ import { normalizeTag } from "@utils/tags";
 
 export type Props = {
   tags: string[];
+  shouldDisableLink?: boolean;
   class?: string;
 };
 
-const { tags, class: className = "" } = Astro.props as Props;
+const {
+  tags,
+  shouldDisableLink = false,
+  class: className = "",
+} = Astro.props as Props;
+
+const tagClass = `inline-block dark:bg-gray-900 dark:text-white
+    bg-gray-300 text-gray-800 border-0 scale-100 rounded-lg px-3 py-1 text-xs font-bold
+    my-2 mx-1 leading-5 ${className}`;
 ---
 
 <span>
   {
-    tags.map((tag) => (
-      <a
-        href={`/tags/${normalizeTag(tag)}`}
-        class={`inline-block hover:bg-gray-400 hover:text-gray-800 hover:scale-110 dark:bg-gray-900 dark:text-white
-    bg-gray-300 text-gray-800 border-0 scale-100 transform rounded-lg px-3 py-1 text-xs font-bold
-    my-2 mx-1 leading-5 transition ease-out duration-200 ${className}`}
-      >
-        {tag}
-      </a>
-    ))
+    tags.map((tag) => {
+      if (shouldDisableLink) {
+        return <div class={tagClass}>{tag}</div>;
+      }
+
+      return (
+        <a
+          href={`/tags/${normalizeTag(tag)}`}
+          class={`${tagClass} transition ease-out duration-200 transform hover:bg-gray-400 hover:text-gray-800 hover:scale-110`}>
+          {tag}
+        </a>
+      );
+    })
   }
 </span>
