--- a/src/pages/courses/index.astro
+++ b/src/pages/courses/index.astro
@@ -1,75 +1,70 @@
 ---
 import { Image } from "@astrojs/image/components";
-import BaseLayout from "@layouts/BaseLayout.astro";
+import SiteLayout from "@layouts/SiteLayout.astro";
 ---
 
-<BaseLayout title="Courses | Dylan Paulus" description="Courses I have created">
-  <section
-    id="main-content"
-    tab-index="-1"
-    class="max-w-screen-sm md:max-w-screen-md lg:max-w-screen-lg xl:max-w-screen-xl mx-auto mt-12">
-    <div class="flex flex-col lg:flex-row w-full">
-      <div class="w-full lg:w-1/2">
-        <Image
-          src="/images/create-react-libraries-card.png"
-          alt="Creating React Libraries from Scratch course"
-          class="rounded-md mx-auto shadow"
-          format="png"
-          aspectRatio="5:3"
-          height={300}
-          width={500}
-        />
-      </div>
-
-      <div
-        class="mt-6 lg:mt-0 w-full md:ml-2 lg:w-1/2 justify-between flex flex-col">
-        <div>
-          <h3 class="m-0">Creating React Libraries from Scratch</h3>
-
-          <p class="mt-4">
-            Building a library is so much more than just the code. We need to
-            know the ins and outs of versioning, deploying, building,
-            documenting, dependency management, module types, tooling, and more.
-            This is a daunting task for just one tutorial to cover. Creating
-            React Libraries from Scratch will teach you everything you need to
-            know to succeed in creating a library.
-          </p>
-
-          <strong class="font-bold"
-            >Creating React Libraries from Scratch covers:</strong
-          >
-          <ul>
-            <li>initializing a new npm package</li>
-            <li>maintaining code quality</li>
-            <li>publishing to npm</li>
-            <li>keeping contributors on track</li>
-            <li>exposing modules that work in NodeJS and the Web</li>
-            <li>unit-testing</li>
-            <li>Storybook for demoing components</li>
-            <li>exposing typing using TypeScript</li>
-            <li>and more!</li>
-          </ul>
-        </div>
-
-        <a
-          class="flex items-center px-6 py-4 mt-8 rounded-md bg-pink-500 text-white hover:text-white hover:bg-pink-600 transform-gpu hover:scale-105 transition-all"
-          target="_blank"
-          href="https://www.newline.co/courses/creating-react-libraries-from-scratch"
-          ><svg
-            height={20}
-            width={20}
-            class="inline mr-2"
-            xmlns="http://www.w3.org/2000/svg"
-            width="24"
-            height="24"
-            viewBox="0 0 24 24">
-            <path
-              fill="currentColor"
-              d="M10 6v2H5v11h11v-5h2v6a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V7a1 1 0 0 1 1-1h6zm11-3v9l-3.794-3.793l-5.999 6l-1.414-1.414l5.999-6L12 3h9z"
-            ></path>
-          </svg>Go to Course</a
-        >
-      </div>
+<SiteLayout title="Courses | Dylan Paulus" description="Courses I have created">
+  <div class="flex flex-col lg:flex-row w-full">
+    <div class="w-full lg:w-1/2">
+      <Image
+        src="/images/create-react-libraries-card.png"
+        alt="Creating React Libraries from Scratch course"
+        class="rounded-md mx-auto shadow"
+        format="png"
+        aspectRatio="5:3"
+        height={300}
+        width={500}
+      />
     </div>
-  </section>
-</BaseLayout>
+
+    <div
+      class="mt-6 lg:mt-0 w-full md:ml-2 lg:w-1/2 justify-between flex flex-col">
+      <div>
+        <h3 class="m-0">Creating React Libraries from Scratch</h3>
+
+        <p class="mt-4">
+          Building a library is so much more than just the code. We need to know
+          the ins and outs of versioning, deploying, building, documenting,
+          dependency management, module types, tooling, and more. This is a
+          daunting task for just one tutorial to cover. Creating React Libraries
+          from Scratch will teach you everything you need to know to succeed in
+          creating a library.
+        </p>
+
+        <strong class="font-bold"
+          >Creating React Libraries from Scratch covers:</strong
+        >
+        <ul>
+          <li>initializing a new npm package</li>
+          <li>maintaining code quality</li>
+          <li>publishing to npm</li>
+          <li>keeping contributors on track</li>
+          <li>exposing modules that work in NodeJS and the Web</li>
+          <li>unit-testing</li>
+          <li>Storybook for demoing components</li>
+          <li>exposing typing using TypeScript</li>
+          <li>and more!</li>
+        </ul>
+      </div>
+
+      <a
+        class="flex items-center px-6 py-4 mt-8 rounded-md bg-pink-500 text-white hover:text-white hover:bg-pink-600 transform-gpu hover:scale-105 transition-all"
+        target="_blank"
+        href="https://www.newline.co/courses/creating-react-libraries-from-scratch"
+        ><svg
+          height={20}
+          width={20}
+          class="inline mr-2"
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24">
+          <path
+            fill="currentColor"
+            d="M10 6v2H5v11h11v-5h2v6a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V7a1 1 0 0 1 1-1h6zm11-3v9l-3.794-3.793l-5.999 6l-1.414-1.414l5.999-6L12 3h9z"
+          ></path>
+        </svg>Go to Course</a
+      >
+    </div>
+  </div>
+</SiteLayout>
