fix: markdown content location

--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -3,7 +3,7 @@ import { Picture } from "@astrojs/image/components";
 import SubHeading from "@components/SubHeading.astro";
 import SiteLayout from "@layouts/SiteLayout.astro";
 import TagList from "~/src/components/TagList.astro";
-import { Content } from "~/src/content/about_me.md";
+import { Content } from "~/src/markdown/about_me.md";
 ---
 
 <SiteLayout title="About | Dylan Paulus" description="About me">
