--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -88,6 +88,7 @@ import { Content } from "~/src/markdown/about_me.md";
               "ASPCore",
               "Postgres",
               "Redis",
+              "RabbitMQ",
               "Docker",
               "Kubernetes",
               "Helm",
