feat: add contact

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -21,6 +21,10 @@ const { title, description } = Astro.props;
 <title>{title}</title>
 <meta name="title" content={title} />
 <meta name="description" content={description} />
+<meta
+  name="keywords"
+  content="HTML, CSS, JavaScript, Typescript, Spokane, Washington, Automation, Engineering Manager, Manager, PNW, Software Engineer, Web Development, C#, Python, Docker, Kubernetes,"
+/>
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
