--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,13 +3,13 @@ const year = new Date().getFullYear();
 ---
 
 <footer
-  class="flex justify-between flex-col sm:flex-row items-center gap-4 max-w-screen-sm md:max-w-screen-md lg:max-w-screen-lg xl:max-w-screen-xl mx-auto mt-12 border-t-2 border-gray-200 dark:border-gray-600 py-10 px-2 md:px-0"
->
+  class="flex justify-between flex-col sm:flex-row items-center gap-4 max-w-screen-sm md:max-w-screen-md lg:max-w-screen-lg xl:max-w-screen-xl mx-auto mt-12 border-t-2 border-gray-200 dark:border-slate-600 py-10 px-2 md:px-0">
   <div class="opacity-70 text-sm">© {year} All rights reserved.</div>
 
   <div>
     <a rel="me" href="https://hachyderm.io/@ganderzz">mastodon</a> /
     <a href="https://github.com/ganderzz">github</a> /
+    <a href="https://www.linkedin.com/in/dylanpaulus/">LinkedIn</a> /
     <a href="/rss.xml">rss</a>
   </div>
 </footer>
