--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -45,6 +45,7 @@ import { ThemeToggle } from "./ThemeToggle";
       <MenuLink href="/about" client:only>About</MenuLink>
 
       <div
+        class="ml-4"
         style={{
           display: "inline-block",
           width: "24px",
