feat: add CI/CD tools

--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -96,6 +96,7 @@ import { Content } from "~/src/markdown/about_me.md";
               "Tilt",
               "Azure",
               "Git",
+              "Jenkins",
             ]}
           />
         </div>
