fix: cleanup buttons and styling

--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -7,7 +7,7 @@ import { Content } from "~/src/markdown/about_me.md";
 ---
 
 <SiteLayout title="About | Dylan Paulus" description="About me">
-  <div class="flex flex-col gap-4 leading-loose">
+  <div class="flex flex-col gap-4 leading-7">
     <div class="flex flex-col md:flex-row w-full">
       <div class="text-center w-full md:w-1/3">
         <Picture
@@ -39,6 +39,23 @@ import { Content } from "~/src/markdown/about_me.md";
             Engineering Manager II @ <a href="https://selinc.com/"
               >Schweitzer Engineering Laboratories</a
             >
+
+            <!-- <ul class="pl-8">
+              <li>
+                Revitalized an engineering team after losing their manager.
+                Brought the engineering team closer to their users, and grew
+                trust with our customers
+              </li>
+              <li>
+                Created a new engineering team to support SEL's consulting
+                services group. The project will increase quality, improve their
+                ability to respond to customers, and improve dignity of work
+              </li>
+              <li>
+                Grew the 'Culture of Learning' series from a monthly talk with
+                10 attendees to bi-weekly consisting of 30
+              </li>
+            </ul> -->
           </li>
           <li>
             Web developer @ <a
