--- a/src/pages/courses/index.astro
+++ b/src/pages/courses/index.astro
@@ -1,6 +1,7 @@
 ---
 import { Image } from "@astrojs/image/components";
 import SiteLayout from "@layouts/SiteLayout.astro";
+import Button from "~/src/components/Button.astro";
 ---
 
 <SiteLayout title="Courses | Dylan Paulus" description="Courses I have created">
@@ -47,11 +48,11 @@ import SiteLayout from "@layouts/SiteLayout.astro";
         </ul>
       </div>
 
-      <a
-        class="flex items-center px-6 py-4 mt-8 rounded-md bg-pink-500 text-white hover:text-white hover:bg-pink-600 transform-gpu hover:scale-105 transition-all"
+      <Button
         target="_blank"
-        href="https://www.newline.co/courses/creating-react-libraries-from-scratch"
-        ><svg
+        class="mt-8"
+        href="https://www.newline.co/courses/creating-react-libraries-from-scratch">
+        <svg
           height={20}
           width={20}
           class="inline mr-2"
@@ -63,8 +64,8 @@ import SiteLayout from "@layouts/SiteLayout.astro";
             fill="currentColor"
             d="M10 6v2H5v11h11v-5h2v6a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V7a1 1 0 0 1 1-1h6zm11-3v9l-3.794-3.793l-5.999 6l-1.414-1.414l5.999-6L12 3h9z"
           ></path>
-        </svg>Go to Course</a
-      >
+        </svg>Go to Course
+      </Button>
     </div>
   </div>
 </SiteLayout>
