--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import { Picture } from "@astrojs/image/components";
 import SiteLayout from "@layouts/SiteLayout.astro";
+import Button from "../components/Button.astro";
 ---
 
 <SiteLayout title="Dylan Paulus" description="">
@@ -33,11 +34,7 @@ import SiteLayout from "@layouts/SiteLayout.astro";
         >.
       </p>
 
-      <a
-        href="/about"
-        class="flex items-center px-6 py-4 mt-8 rounded-md dark:bg-[#ff99c7] dark:hover:bg-[#ffcce3] bg-[#5755c9] hover:bg-[#1e1c63] text-white hover:text-white dark:text-black transform-gpu hover:scale-105 transition-all"
-        >Learn more about me</a
-      >
+      <Button href="/about">Learn more about me</Button>
     </div>
 
     <div class="max-w-md md:max-w-sm lg:max-w-md hidden lg:block lg:w-1/2">
@@ -60,10 +57,6 @@ import SiteLayout from "@layouts/SiteLayout.astro";
       discuss?
     </p>
 
-    <a
-      href="mailto:dylantpaulus@gmail.com"
-      class="opacity-90 hover:opacity-100 px-6 py-4 rounded-md dark:bg-[#ff99c7] dark:hover:bg-[#ffcce3] bg-[#5755c9] hover:bg-[#1e1c63] text-white hover:text-white dark:text-black transform-gpu hover:scale-105 transition-all"
-      >Contact me</a
-    >
+    <Button href="mailto:dylantpaulus@gmail.com">Contact me</Button>
   </div>
 </SiteLayout>
