--- a/src/pages/posts/[...page].astro
+++ b/src/pages/posts/[...page].astro
@@ -60,7 +60,7 @@ const { page, tags } = Astro.props as {
     </div>
 
     <aside class="sm:flex flex-col w-1/3 md:px-8 hidden">
-      <a href="/sitemap">
+      <a class="block w-fit" href="/sitemap">
         <SubHeading>Popular Tags</SubHeading>
       </a>
 
