feat: add git worktree article

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -15,16 +15,13 @@ const { title, description } = Astro.props;
 <meta http-equiv="x-ua-compatible" content="ie=edge" />
 <meta name="viewport" content="width=device-width" />
 <link rel="icon" href="/favicon.svg" />
+<meta name="”robots”" content="index, follow" />
 <meta name="generator" content={Astro.generator} />
 
 <!-- Primary Meta Tags -->
 <title>{title}</title>
 <meta name="title" content={title} />
 <meta name="description" content={description} />
-<meta
-  name="keywords"
-  content="HTML, CSS, JavaScript, Typescript, Spokane, Washington, Automation, Engineering Manager, Manager, PNW, Software Engineer, Web Development, C#, Python, Docker, Kubernetes,"
-/>
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
