fix: cleanup and add card

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -28,14 +28,14 @@ const { title, description } = Astro.props;
 <meta property="og:url" content={canonicalURL} />
 <meta property="og:title" content={title} />
 <meta property="og:description" content={description} />
-<meta property="og:image" content="https://astro.build/social.png" />
+<meta property="og:image" content={`${Astro.site}card.png`} />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content={canonicalURL} />
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
-<meta property="twitter:image" content="https://astro.build/social.png" />
+<meta property="twitter:image" content={`${Astro.site}card.png`} />
 
 <!-- Fonts -->
 <link rel="preconnect" href="https://rsms.me" />
