fix(speed): improve page paint speed

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -38,4 +38,5 @@ const { title, description } = Astro.props;
 <meta property="twitter:image" content={`${Astro.site}card.png`} />
 
 <!-- Fonts -->
-<link rel="preconnect" href="https://rsms.me" />
+<link rel="preconnect" href="https://rsms.me/">
+<link rel="stylesheet" href="https://rsms.me/inter/inter.css">
