--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,6 +45,7 @@ import Button from "../components/Button.astro";
         sizes="(max-width: 800px) 100vw, 800px"
         alt="Dylan presenting at Boise Code Camp teaching the fundamentals of functional programming"
         class="shadow-lg rounded-md"
+        loading="eager"
       />
     </div>
   </div>
