--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,7 +1,12 @@
-@import url("https://rsms.me/inter/inter.css");
-
 :root {
+  font-family: "Inter", sans-serif;
   --border-radius: 0.5rem;
+}
+
+@supports (font-variation-settings: normal) {
+  :root {
+    font-family: "Inter var", sans-serif;
+  }
 }
 
 html,
