--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -17,10 +17,12 @@ const { title, description } = Astro.props;
 <link rel="icon" href="/favicon.svg" />
 <meta name="”robots”" content="index, follow" />
 <meta name="generator" content={Astro.generator} />
+<link rel="canonical" href={canonicalURL} />
 
 <!-- Primary Meta Tags -->
 <title>{title}</title>
 <meta name="title" content={title} />
+<meta name="author" content="Dylan Paulus" />
 <meta name="description" content={description} />
 
 <!-- Open Graph / Facebook -->
@@ -38,5 +40,5 @@ const { title, description } = Astro.props;
 <meta property="twitter:image" content={`${Astro.site}card.png`} />
 
 <!-- Fonts -->
-<link rel="preconnect" href="https://rsms.me/">
-<link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+<link rel="preconnect" href="https://rsms.me/" />
+<link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
