--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -15,7 +15,7 @@ const { title, description } = Astro.props;
 <meta http-equiv="x-ua-compatible" content="ie=edge" />
 <meta name="viewport" content="width=device-width" />
 <link rel="icon" href="/favicon.svg" />
-<meta name="”robots”" content="index, follow" />
+<meta name="robots" content="index, follow" />
 <meta name="generator" content={Astro.generator} />
 <link rel="canonical" href={canonicalURL} />
 
