feat(cards): generate social cards on build

--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -17,6 +17,7 @@ import { Content } from "~/src/markdown/about_me.md";
           sizes="(max-width: 800px) 100vw, 800px"
           alt="Image of Dylan playing drums"
           class="shadow-lg rounded-md m-auto w-full aspect-auto"
+          loading="eager"
         />
 
         <figcaption class="text-sm mt-2">
