--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -8,6 +8,10 @@ export interface Props {
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 const { title, description } = Astro.props;
+
+const cardPath = /posts\/(.+?)/i.exec(Astro.url.pathname)
+  ? `${canonicalURL}/card.png`
+  : `${Astro.site}card.png`;
 ---
 
 <!-- Global Metadata -->
@@ -30,14 +34,14 @@ const { title, description } = Astro.props;
 <meta property="og:url" content={canonicalURL} />
 <meta property="og:title" content={title} />
 <meta property="og:description" content={description} />
-<meta property="og:image" content={`${Astro.site}card.png`} />
+<meta property="og:image" content={cardPath} />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content={canonicalURL} />
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
-<meta property="twitter:image" content={`${Astro.site}card.png`} />
+<meta property="twitter:image" content={cardPath} />
 
 <!-- Fonts -->
 <link rel="preconnect" href="https://rsms.me/" />
