--- a/src/pages/courses/index.astro
+++ b/src/pages/courses/index.astro
@@ -15,6 +15,7 @@ import Button from "~/src/components/Button.astro";
         aspectRatio="5:3"
         height={300}
         width={500}
+        loading="eager"
       />
     </div>
 
