--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -10,7 +10,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 const { title, description } = Astro.props;
 
 const cardPath = /posts\/(.+?)/i.exec(Astro.url.pathname)
-  ? `${canonicalURL}/card.png`
+  ? `${canonicalURL}card.png`
   : `${Astro.site}card.png`;
 ---
 
