--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,6 +1,7 @@
 ---
 import type { CollectionEntry } from "astro:content";
 import FrontmatterInfo from "../components/FrontmatterInfo.astro";
+import Newsletter from "../components/Newsletter.astro";
 import BaseLayout from "./BaseLayout.astro";
 
 export interface Props {
@@ -22,7 +23,7 @@ const { frontmatter } = Astro.props as Props;
       class={`${
         frontmatter.series ? "mb-0" : "mb-10"
       } mt-4 mx-auto font-bold text-center`}
-      style={{ maxWidth: "45ch" }}>
+      style={{ maxWidth: "40ch" }}>
       {frontmatter.title}
     </h1>
 
@@ -30,7 +31,7 @@ const { frontmatter } = Astro.props as Props;
       frontmatter.series && (
         <h6
           class="mb-10 mt-0 mx-auto italic text-center"
-          style={{ maxWidth: "45ch" }}>
+          style={{ maxWidth: "40ch" }}>
           Part of the {frontmatter.series} series.
         </h6>
       )
@@ -39,6 +40,10 @@ const { frontmatter } = Astro.props as Props;
     <article class="blog__post mb-10 dark:text-gray-100 leading-relaxed">
       <slot />
     </article>
+
+    <div class="flex items-center justify-center my-10">
+      <Newsletter />
+    </div>
 
     <div class="blog__post my-4">
       <script
