fix(newsletter): change wording

--- a/src/components/Newsletter.astro
+++ b/src/components/Newsletter.astro
@@ -23,7 +23,7 @@
       class="formkit-subheader"
       style="font-size: 18px;"
       data-element="subheader">
-      <p>Join my newsletter to get updated when new articles release.</p>
+      <p>Get updates when I post new articles!</p>
     </div>
     <ul
       class="formkit-alert formkit-alert-error hidden"
