--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,6 +58,6 @@ import Button from "../components/Button.astro";
       discuss?
     </p>
 
-    <Button href="mailto:dylantpaulus@gmail.com">Contact me</Button>
+    <Button href="mailto:hey@dylanpaulus.com">Contact me</Button>
   </div>
 </SiteLayout>
