feat: update dependencies

--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -60,6 +60,7 @@ import { Content } from "~/src/markdown/about_me.md";
           </li>
           <li>
             Web developer @ <a
+              data-goatcounter-click="moby-games__click"
               href="https://www.mobygames.com/developer/sheet/view/developerId,783203/"
               >Sony PlayStation
             </a>
@@ -84,6 +85,7 @@ import { Content } from "~/src/markdown/about_me.md";
             <li>
               <a
                 target="_blank"
+                data-goatcounter-click="introduction-functional-programming-boise__click"
                 href="https://introduction-functional-programming-boise.netlify.com/#/"
                 >Functional Programming Light (Boise Code Camp 2019)</a
               >
