--- a/src/pages/courses/index.astro
+++ b/src/pages/courses/index.astro
@@ -52,6 +52,7 @@ import Button from "~/src/components/Button.astro";
       <Button
         target="_blank"
         class="mt-8"
+        data-goatcounter-click="creating-react-libraries-from-scratch__click"
         href="https://www.newline.co/courses/creating-react-libraries-from-scratch">
         <svg
           height={20}
