--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,6 +17,7 @@ import Button from "../components/Button.astro";
         for close to a decade. Currently, I'm focused on writing code that lets
         everyone experience the unconditional love of a pet at <a
           href="https://www.rover.com/"
+          data-goatcounter-click="rover__click"
           target="_blank"
           ><svg
             height={20}
@@ -58,6 +59,10 @@ import Button from "../components/Button.astro";
       discuss?
     </p>
 
-    <Button href="mailto:hey@dylanpaulus.com">Contact me</Button>
+    <Button
+      data-goatcounter-click="contact-me__click"
+      href="mailto:hey@dylanpaulus.com">
+      Contact me
+    </Button>
   </div>
 </SiteLayout>
