fix: cleanup mobile menu

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -22,7 +22,7 @@ const { frontmatter } = Astro.props as Props;
     <h1
       class={`${
         frontmatter.series ? "mb-0" : "mb-10"
-      } mt-4 mx-auto font-bold text-center`}
+      } mt-4 mx-auto px-4 font-bold text-center`}
       style={{ maxWidth: "40ch" }}>
       {frontmatter.title}
     </h1>
