--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,8 +6,7 @@ import { ThemeToggle } from "./ThemeToggle";
 <header class="pt-2 sm:pt-10 px-8 mb-24 pb-12 mx-auto shadow-sm">
   <div
     class="z-10 relative container md:max-w-none mx-auto md:w-full lg:mx-auto h-12 block sm:flex sm:items-center">
-    <div
-      class="block relative text-5xl mx-0 font-bold lg:w-1/2 w-full sm:w-1/4">
+    <div class="block relative text-5xl mx-0 font-bold w-full lg:w-1/2">
       <a
         href="/"
         title="Navigate to home page"
@@ -38,16 +37,15 @@ import { ThemeToggle } from "./ThemeToggle";
     </div>
 
     <nav
-      aria-label="Main"
-      class="sm:mt-0 sm:text-right text-center mt-4 w-full lg:w-1/2 sm:w-3/4 z-10 flex items-center justify-end">
+      aria-label="Main menu"
+      class="sm:mt-0 md:text-right text-center mt-4 w-full lg:w-1/2 z-10 flex items-center justify-center sm:justify-end">
       <MenuLink href="/posts" client:only>Posts</MenuLink>
       <MenuLink href="/courses" client:only>Courses</MenuLink>
       <MenuLink href="/about" client:only>About</MenuLink>
 
       <div
-        class="ml-4"
+        class="ml-4 hidden sm:block"
         style={{
-          display: "inline-block",
           width: "24px",
           height: "24px",
         }}>
