--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,7 @@ import Button from "../components/Button.astro";
         >.
       </p>
 
-      <Button href="/about">Learn more about me</Button>
+      <div class="mt-6"><Button href="/about">Learn more about me</Button></div>
     </div>
 
     <div class="max-w-md md:max-w-sm lg:max-w-md hidden lg:block lg:w-1/2">
