--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -42,6 +42,14 @@ const { title, description } = Astro.props as Props;
         document.documentElement.classList.add(theme);
         localStorage.setItem("theme", theme);
       </script>
+
+      <script is:inline>
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "hihbtmbo6c");
+      </script>
   </head>
 
   <body>
