--- a/src/components/Alert.astro
+++ b/src/components/Alert.astro
@@ -1,10 +1,9 @@
 ---
 type Props = {
   type: "info" | "success" | "warning" | "error";
-  body: string;
 };
 
-const { type, body } = Astro.props;
+const { type } = Astro.props;
 
 const colors = {
   info: "bg-blue-100 text-blue-800",
@@ -15,5 +14,5 @@ const colors = {
 ---
 
 <div class={`text-sm rounded mb-4 px-4 py-2 ${colors[type]}`}>
-  {body}
+  <slot />
 </div>
