--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -7,118 +7,100 @@ import { Content } from "~/src/markdown/about_me.md";
 ---
 
 <SiteLayout title="About | Dylan Paulus" description="About me">
-    <div class="flex flex-col md:flex-row w-full">
-      <div class="text-center w-full md:w-1/3">
-        <Picture
-          src="/images/about-image.jpg"
-          widths={[200, 400, 800]}
-          aspectRatio="4:4"
-          sizes="(max-width: 800px) 100vw, 800px"
-          alt="Image of Dylan playing drums"
-          class="shadow-lg rounded-md m-auto w-full aspect-auto"
-          loading="eager"
-        />
+  <div class="flex flex-col md:flex-row w-full">
+    <div class="text-center w-full md:w-1/3">
+      <Picture
+        src="/images/about-image.jpg"
+        widths={[200, 400, 800]}
+        aspectRatio="4:4"
+        sizes="(max-width: 800px) 100vw, 800px"
+        alt="Image of Dylan playing drums"
+        class="shadow-lg rounded-md m-auto w-full aspect-auto"
+        loading="eager"
+      />
 
-        <figcaption class="text-sm mt-2">
-          That's me, the one on the drums!
-        </figcaption>
-      </div>
+      <figcaption class="text-sm mt-2">
+        That's me, the one on the drums!
+      </figcaption>
+    </div>
 
-      <section class="w-full md:w-2/3 mt-8 md:mt-0 ml-0 md:ml-12">
-        <SubHeading>About</SubHeading>
+    <section class="w-full md:w-2/3 mt-8 md:mt-0 ml-0 md:ml-12">
+      <SubHeading>About</SubHeading>
 
-        <div class="mb-12"><Content /></div>
+      <div class="mb-12"><Content /></div>
 
-        <SubHeading>Experience</SubHeading>
-        <ul class="m-0">
+      <SubHeading>Experience</SubHeading>
+      <ul class="m-0">
+        <li>
+          Senior Software Engineer @ <a href="https://rover.com/">Rover.com</a>
+        </li>
+        <li>
+          Engineering Manager II @ <a href="https://selinc.com/"
+            >Schweitzer Engineering Laboratories</a
+          >
+        </li>
+        <li>
+          Web developer @ <a
+            data-goatcounter-click="moby-games__click"
+            href="https://www.mobygames.com/developer/sheet/view/developerId,783203/"
+            >Sony PlayStation
+          </a>
+        </li>
+        <li>
+          Student web developer @ <a href="https://www.ewu.edu/"
+            >Eastern Washington University</a
+          >
+        </li>
+      </ul>
+
+      <div class="w-full mt-12">
+        <SubHeading>Talks I've Given</SubHeading>
+        <ul class="list-disc list-inside ml-4">
           <li>
-            Senior Software Engineer @ <a href="https://rover.com/">Rover.com</a
-            >
+            Developing Software at SEL (Presentation for EWU students 2022)
           </li>
           <li>
-            Engineering Manager II @ <a href="https://selinc.com/"
-              >Schweitzer Engineering Laboratories</a
-            >
-
-            <!-- <ul class="pl-8">
-              <li>
-                Revitalized an engineering team after losing their manager.
-                Brought the engineering team closer to their users, and grew
-                trust with our customers
-              </li>
-              <li>
-                Created a new engineering team to support SEL's consulting
-                services group. The project will increase quality, improve their
-                ability to respond to customers, and improve dignity of work
-              </li>
-              <li>
-                Grew the 'Culture of Learning' series from a monthly talk with
-                10 attendees to bi-weekly consisting of 30
-              </li>
-            </ul> -->
+            NPM, Dependencies, and JS Modules (Internal Presentation 2021)
           </li>
+          <li>Making React Fast (Internal Presentation 2019)</li>
           <li>
-            Web developer @ <a
-              data-goatcounter-click="moby-games__click"
-              href="https://www.mobygames.com/developer/sheet/view/developerId,783203/"
-              >Sony PlayStation
-            </a>
-          </li>
-          <li>
-            Student web developer @ <a href="https://www.ewu.edu/"
-              >Eastern Washington University</a
+            <a
+              target="_blank"
+              data-goatcounter-click="introduction-functional-programming-boise__click"
+              href="https://introduction-functional-programming-boise.netlify.com/#/"
+              >Functional Programming Light (Boise Code Camp 2019)</a
             >
           </li>
         </ul>
+      </div>
 
-        <div class="w-full mt-12">
-          <SubHeading>Talks I've Given</SubHeading>
-          <ul class="list-disc list-inside ml-4">
-            <li>
-              Developing Software at SEL (Presentation for EWU students 2022)
-            </li>
-            <li>
-              NPM, Dependencies, and JS Modules (Internal Presentation 2021)
-            </li>
-            <li>Making React Fast (Internal Presentation 2019)</li>
-            <li>
-              <a
-                target="_blank"
-                data-goatcounter-click="introduction-functional-programming-boise__click"
-                href="https://introduction-functional-programming-boise.netlify.com/#/"
-                >Functional Programming Light (Boise Code Camp 2019)</a
-              >
-            </li>
-          </ul>
-        </div>
-
-        <div class="w-full mt-12">
-          <SubHeading>Technologies I've Used</SubHeading>
-          <TagList
-            shouldDisableLink
-            tags={[
-              "C#",
-              "Python",
-              "HTML",
-              "JavaScript/TypeScript",
-              "CSS",
-              "React",
-              "Django",
-              "ASPCore",
-              "Postgres",
-              "Redis",
-              "RabbitMQ",
-              "Docker",
-              "Kubernetes",
-              "Helm",
-              "Istio",
-              "Tilt",
-              "Azure",
-              "Git",
-              "Jenkins",
-            ]}
-          />
-        </div>
-      </section>
-    </div>
+      <div class="w-full mt-12">
+        <SubHeading>Technologies I've Used</SubHeading>
+        <TagList
+          shouldDisableLink
+          tags={[
+            "C#",
+            "Python",
+            "HTML",
+            "JavaScript/TypeScript",
+            "CSS",
+            "React",
+            "Django",
+            "ASPCore",
+            "Postgres",
+            "Redis",
+            "RabbitMQ",
+            "Docker",
+            "Kubernetes",
+            "Helm",
+            "Istio",
+            "Tilt",
+            "Azure",
+            "Git",
+            "Jenkins",
+          ]}
+        />
+      </div>
+    </section>
+  </div>
 </SiteLayout>
