--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -18,38 +18,45 @@ const { title, description } = Astro.props as Props;
     <BaseHead title={title} description={description} />
 
     <script is:inline>
-        /**
-         * Show the correct theme on page load and page switching.
-         * This code prevents the site from flickering light/dark.
-         */
-        const theme = (() => {
-          const mode =
-            typeof localStorage !== "undefined" && localStorage.getItem("theme");
-  
-          if (mode) {
-            return mode;
-          }
-  
-          if (window.matchMedia("(prefers-color-scheme: dark)").matches) {
-            return "dark";
-          }
-  
-          return "light";
-        })();
-  
-        document.documentElement.dataset.theme = theme;
-        document.documentElement.classList.remove("light", "dark");
-        document.documentElement.classList.add(theme);
-        localStorage.setItem("theme", theme);
-      </script>
+      /**
+       * Show the correct theme on page load and page switching.
+       * This code prevents the site from flickering light/dark.
+       */
+      const theme = (() => {
+        const mode =
+          typeof localStorage !== "undefined" && localStorage.getItem("theme");
 
-      <script is:inline>
-    (function(c,l,a,r,i,t,y){
-        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-    })(window, document, "clarity", "script", "hihbtmbo6c");
-      </script>
+        if (mode) {
+          return mode;
+        }
+
+        if (window.matchMedia("(prefers-color-scheme: dark)").matches) {
+          return "dark";
+        }
+
+        return "light";
+      })();
+
+      document.documentElement.dataset.theme = theme;
+      document.documentElement.classList.remove("light", "dark");
+      document.documentElement.classList.add(theme);
+      localStorage.setItem("theme", theme);
+    </script>
+
+    <script is:inline>
+      (function (c, l, a, r, i, t, y) {
+        c[a] =
+          c[a] ||
+          function () {
+            (c[a].q = c[a].q || []).push(arguments);
+          };
+        t = l.createElement(r);
+        t.async = 1;
+        t.src = "https://www.clarity.ms/tag/" + i;
+        y = l.getElementsByTagName(r)[0];
+        y.parentNode.insertBefore(t, y);
+      })(window, document, "clarity", "script", "hihbtmbo6c");
+    </script>
   </head>
 
   <body>
