--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,9 +7,9 @@ const year = new Date().getFullYear();
   <div class="opacity-70 text-sm">© {year} All rights reserved.</div>
 
   <div>
-    <a rel="me" href="https://hachyderm.io/@ganderzz">mastodon</a> /
-    <a href="https://github.com/ganderzz">github</a> /
+    <a rel="me" href="https://hachyderm.io/@ganderzz">Mastodon</a> /
+    <a href="https://github.com/ganderzz">Github</a> /
     <a href="https://www.linkedin.com/in/dylanpaulus/">LinkedIn</a> /
-    <a href="/rss.xml">rss</a>
+    <a href="/rss.xml">RSS</a>
   </div>
 </footer>
