--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -30,7 +30,7 @@ import { Content } from "~/src/markdown/about_me.md";
       <div class="mb-12"><Content /></div>
 
       <SubHeading>Experience</SubHeading>
-      <ul class="m-0">
+      <ul class="m-0 leading-relaxed">
         <li>
           Senior Software Engineer @ <a href="https://rover.com/">Rover.com</a>
         </li>
@@ -55,7 +55,7 @@ import { Content } from "~/src/markdown/about_me.md";
 
       <div class="w-full mt-12">
         <SubHeading>Talks I've Given</SubHeading>
-        <ul class="list-disc list-inside ml-4">
+        <ul class="list-disc list-inside ml-4 leading-relaxed">
           <li>
             Developing Software at SEL (Presentation for EWU students 2022)
           </li>
@@ -75,7 +75,7 @@ import { Content } from "~/src/markdown/about_me.md";
       </div>
 
       <div class="w-full mt-12">
-        <SubHeading>Technologies I've Used</SubHeading>
+        <SubHeading>Technologies I've Worked In</SubHeading>
         <TagList
           shouldDisableLink
           tags={[
@@ -98,6 +98,8 @@ import { Content } from "~/src/markdown/about_me.md";
             "Azure",
             "Git",
             "Jenkins",
+            "Nginx",
+            "IIS",
           ]}
         />
       </div>
