--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -29,7 +29,7 @@ const { Content, remarkPluginFrontmatter } = await post.render();
   codeblocks.forEach((block) => {
     const copyButton = document.createElement("button");
     copyButton.innerText = "Copy";
-    copyButton.classList.add("copy-button");
+    copyButton.classList.add("copy-button", "text-white");
 
     copyButton.addEventListener("click", () => {
       navigator.clipboard.writeText(block.innerText);
